[fix] ブログ記事へのリンク修正

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- /.l-main -->
     <footer class="l-footer">
       <div class="l-footer__inner u-frame">
-        <a class="l-footer__back" href="https://notes.sharesl.net/articles/2539/" target="_blank" rel="noopener">「【JS】MutationObserverで--DOMを監視する--[PhotoSwipe（v5）+Swiper（v8）連携デモ]」<br>記事ページに戻る</a>
+        <a class="l-footer__back" href="https://notes.sharesl.net/articles/2539/" target="_blank" rel="noopener">「【JS】MutationObserverでDOMを監視する[PhotoSwipe（v5）+Swiper（v8）連携デモ]」<br>記事ページに戻る</a>
       </div>
       <!-- /.l-footer__inner -->
     </footer>
